--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = 'java-samples'
+rootProject.name = 'jann'
 
 def subDirs = rootDir.listFiles(new FileFilter() {
         public boolean accept(File file) {
