--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,31 @@
-## generic files to ignore
+######################################
+
+### generic files to ignore ###
 *~
 *.lock
 *.DS_Store
 *.swp
 *.out
 
+######################################
+
 ### Java ###
 *.class
 .settings/
 bin
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+######################################
 
 ### Eclipse ### 
 .classpath
@@ -21,14 +38,4 @@ build/
 # Ignore Gradle GUI config
 gradle-app.setting
 
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+######################################
