--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,48 @@
-######################################
-
-### generic files to ignore ###
-*~
-*.lock
-*.DS_Store
-*.swp
-*.out
-
-######################################
-
-### Java ###
+###################
+# Generic
+###################
 *.class
-.settings/
-bin
+*.log
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
+###################
+# Java
+###################
 *.jar
-*.war
-*.ear
+target/
+###################
+# IDEA
+###################
+.idea/
+/bin/
+*.iml
+*.attach_pid*
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+###################
+# EMACS & Ensime
+###################
+.ensime
+.ensime_cache
 
-######################################
 
-### Eclipse ### 
-.classpath
+###################
+# Javascript
+###################
+node_modules
+dist
+.tmp
+.sass-cache
+bower_components
+test/bower_components
+*~
+.#*
+app/*~
+app/styles/*.css
+app/content/*/*.*
+!app/content/*.md
 
-### Gradle ###
-.gradle
-build/
-!gradle/wrapper/gradle-wrapper.jar
+##################
+# Mac
+##################
+__MACOSX
+*.DS_Store
 
-# Ignore Gradle GUI config
-gradle-app.setting
-
-######################################
