--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
     </distributionManagement>
     <dependencies>
         <dependency>
+            <groupId>io.memoria.jutils</groupId>
+            <artifactId>core</artifactId>
+            <version>0.7.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.jblas</groupId>
             <artifactId>jblas</artifactId>
             <version>1.2.4</version>
